[package]
name = "firefly_session-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.firefly_session]
path = ".."

[dependencies.firefly_diagnostics]
path = "../../diagnostics"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "resource"
path = "fuzz_targets/resource.rs"
test = false
doc = false
